--- a/openshift/deployment-tomcat.yaml
+++ b/openshift/deployment-tomcat.yaml
@@ -14,6 +14,6 @@ spec:
         spec:
             containers:
             - name: tomcat
-              image: tomcat
+              image: nachomillangarcia/tomcat
               ports:
               - containerPort: 8080
