add probes to mysql

--- a/openshift/deployment-mysql.yaml
+++ b/openshift/deployment-mysql.yaml
@@ -32,4 +32,15 @@ spec:
                 limits:
                   cpu: 500m
                   memory: 1.5G
-                  
+              livenessProbe:
+                exec:
+                  command:
+                  - cat
+                  - /tmp/healthy
+                initialDelaySeconds: 30
+                periodSeconds: 10
+                failureThreshold: 3
+              readinessProbe:
+                tcpSocket:
+                  port: 3306
+                periodSeconds: 10                   
