--- a/openshift/deployment-mysql.yaml
+++ b/openshift/deployment-mysql.yaml
@@ -41,4 +41,11 @@ spec:
               readinessProbe:
                 tcpSocket:
                   port: 3306
-                periodSeconds: 10                   
+                periodSeconds: 10
+              volumeMounts:
+                - name: my-volume-data
+                  mountPath: /var/lib/mysql
+            volumes:
+              - name: my-volume-data
+                persistentVolumeClaim:
+                    claimName: my-data
