--- a/openshift/deployment-mysql-petclinic.yaml
+++ b/openshift/deployment-mysql-petclinic.yaml
@@ -42,3 +42,10 @@ spec:
                 tcpSocket:
                   port: 3306
                 periodSeconds: 10                   
+              volumeMounts:
+                - name: my-volume-data
+                  mountPath: /var/lib/mysql
+            volumes:
+              - name: my-volume-data
+                persistentVolumeClaim:
+                    claimName: my-data
