--- a/openshift/configmap.yaml
+++ b/openshift/configmap.yaml
@@ -7,7 +7,7 @@ data:
   NAME: PETCLINIC
   application.properties: |
     database=mysql
-    spring.datasource.url=mysql-petclinic
+    spring.datasource.url=jdbc:mysql://mysql:3306/petclinic
     spring.datasource.username=petclinic
     spring.datasource.password=petclinic
     spring.datasource.initialization-mode=always
