--- a/spring-petclinic/Dockerfile
+++ b/spring-petclinic/Dockerfile
@@ -2,6 +2,7 @@ FROM maven:3.6.3-jdk-8
 WORKDIR /app
 COPY pom.xml pom.xml
 COPY src src
+RUN ls
 RUN mvn package
 RUN mv target/*.jar target/app.jar
 CMD ["java", "-jar", "target/app.jar"]
