--- a/openshift/bc-petclinic.yaml
+++ b/openshift/bc-petclinic.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: ImageStream
+metadata:
+  labels:
+    application: petclinc
+  name: petclinc
+  
+---
 kind: "BuildConfig"
 apiVersion: "v1"
 metadata:
@@ -25,6 +33,5 @@ spec:
       dockerfilePath: .
   output:
     to:
-      kind: "DockerImage"
-      name: "docker-registry.default.svc:5000/formadores/petclinic"
-
+      kind: ImageStreamTag
+      name: 'petclinc:latest'
