--- a/openshift/bc-todo.yaml
+++ b/openshift/bc-todo.yaml
@@ -5,26 +5,17 @@ metadata:
     application: todo
   name: "todo" 
 spec:
-  # runPolicy: "Serial" 
-  # triggers: 
-  #   -
-  #     type: "GitHub"
-  #     github:
-  #       secret: "secret101"
-  #   - type: "Generic"
-  #     generic:
-  #       secret: "secret101"
-  #   -
-  #     type: "ImageChange"
   source: 
     git:
       uri: "https://github.com/nachomillangarcia/formadores-openshift.git"
     contextDir: java-app-todo-mysql
   strategy:
-    dockerStrategy:
-      dockerfilePath: .
+    sourceStrategy:
+      from:
+        kind: DockerImage
+        name: 'openshift/wildfly-101-centos7'
   output:
     to:
       kind: "DockerImage"
-      name: "docker-registry.default.svc:5000/formadores/java-todo"
+      name: "openshift-image-registry.image-registry.svc:5000/formadores/java-todo"
 
