--- a/openshift/bc-todo.yaml
+++ b/openshift/bc-todo.yaml
@@ -1,5 +1,5 @@
 kind: "BuildConfig"
-apiVersion: "v1"
+apiVersion: "build.openshift.io/v1"
 metadata:
   labels:
     application: todo
@@ -17,5 +17,5 @@ spec:
   output:
     to:
       kind: "DockerImage"
-      name: "openshift-image-registry.image-registry.svc:5000/formadores/java-todo"
+      name: "image-registry.openshift-image-registry.svc:5000/formadores/java-todo"
 
